--- a/index.html
+++ b/index.html
@@ -889,8 +889,7 @@
                 href="https://github.com/ujayjumpman/AI-Meeting-Assistant"
                 target="_blank"
                 rel="noopener noreferrer"
-                >Code</a
-              >
+                >Code</a>
             </div>
           </div>
         </div>
